# theclockproject-saver

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  vite.config.js
assets/: .gitkeep
screensaver/mac/: ClockProjectSaver.swift  ClockProjectSaverView.swift  Info.plist  Makefile
screensaver/mac/Resources/: screensaver.html  screensaver.js
screensaver/windows/: register.ps1
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
