[package]
name = "theclockproject-saver"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
dirs = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
